src/test/06-Errors/error-super-no-func.txt
error-super-no-func.ck:21:15: error: class 'Parent' has no member 'not_override'
[21]         super.not_override();
                   ^
error-super-no-func.ck: ...in function 'void Child.test()'
